--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,27 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.App {
+  display: flex;
+  height: 67.5rem;
+  width: 120rem;
+  background-color: #131129;
+
+  font-family: 'Poppins', sans-serif;
+}
+
+.App-lm {
+  display: flex;
+  height: 67.5rem;
+  width: 120rem;
+  background-color: #BCBCBC;
+
+  font-family: 'Poppins', sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
