Fix CSS issues, update metadata

--- a/app/marketplace/components/card/card.css
+++ b/app/marketplace/components/card/card.css
@@ -36,6 +36,10 @@ button {
     color: #FFFFFF;
 }
 
+#bid--button {
+    width: 90%;
+}
+
 #title {
     margin-top: 1.25rem;
     margin-bottom: 1.25rem;
